# cv_object_tracking

./: CMakeLists.txt  LICENSE  README.md  package.xml
include/cv_object_tracker/: detector.hpp  pid.hpp  tracker.hpp
launch/: run.launch.py
src/: detector.cpp  main.cpp  tracker.cpp
